PZ-64, PZ-65 | AbstractHighlightFileInfoCellCallback Unit Test,CommentsHighlightFileInfoCellCallback Unit Test | Implemented unit tests