@@ -152,6 +152,17 @@
                     <dotGitDirectory>${project.parent.basedir}/.git</dotGitDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>--add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</compilerArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
